<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewNoteActivity">


    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ettitle"
        android:inputType="text" />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/etdescription"
        android:inputType="textMultiLine" />

    <EditText
        android:id="@+id/etPriority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/etpriority" />


</androidx.appcompat.widget.LinearLayoutCompat>