<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".RegistrationActivity">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:padding="15dp"
        android:text="@string/register"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:textStyle="bold"
            android:text="RegEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etRegEmail"
            android:layout_width="match_parent"
            android:inputType="text"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:textStyle="bold"
            android:text="@string/RegPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/etRegPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonRegistration"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="22dp"
        android:background="#d67601"
        android:text="signUp"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="18sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btLogInPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/logIn_Here"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />


</androidx.appcompat.widget.LinearLayoutCompat>